[gd_scene load_steps=3 format=3 uid="uid://bip5f7vffwtjw"]

[ext_resource type="Script" path="res://Scenes/Hazards/Center_Top.gd" id="1_q8r40"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ravhw"]
size = Vector2(1178, 13)

[node name="CenterTop" type="Node2D"]
script = ExtResource("1_q8r40")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -589.0
offset_top = -7.0
offset_right = 589.0
offset_bottom = 7.0
color = Color(0, 1, 1, 1)

[node name="Area2D" type="Area2D" parent="ColorRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Area2D"]
position = Vector2(589, 6.5)
shape = SubResource("RectangleShape2D_ravhw")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="body_entered" from="ColorRect/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
